fix spacing bug

--- a/media-queries.css
+++ b/media-queries.css
@@ -73,10 +73,9 @@
     margin-top: 30px;
   }
   #about {
-    height: 84vh;
+    height: 92vh;
     padding-top: 10px;
-    margin-top: 10vh;
-    margin-bottom: 40vh;
+
   }
   #skills{
     padding-top: 20vh;
