--- a/style.css
+++ b/style.css
@@ -294,7 +294,6 @@ section {
 }
 .text-container {
   padding-bottom: 1rem;
-  padding-top: 2.5rem;
 }
 .details-container {
   align-self: center;
